src/generated/DLParser.py
# Generated from DL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DLParser ( Parser ):

    grammarFileName = "DL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'while'", "'for'", 
                     "'in'", "'def'", "'return'", "'var'", "'print'", "'plot'", 
                     "'new'", "'true'", "'false'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'^'", "'=='", "'!='", "'>'", "'<'", "'>='", 
                     "'<='", "'&&'", "'||'", "'!'", "'='", "'.'", "':'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "FOR", "IN", "DEF", 
                      "RETURN", "VAR", "PRINT", "PLOT", "NEW", "TRUE", "FALSE", 
                      "ID", "INT", "FLOAT", "STRING", "PLUS", "MINUS", "MULT", 
                      "DIV", "MOD", "POW", "EQ", "NEQ", "GT", "LT", "GTE", 
                      "LTE", "AND", "OR", "NOT", "ASSIGN", "DOT", "COLON", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "SEMI", "COMMA", "WS", "COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_varDeclaration = 2
    RULE_assignment = 3
    RULE_functionDef = 4
    RULE_block = 5
    RULE_ifStatement = 6
    RULE_whileStatement = 7
    RULE_forStatement = 8
    RULE_returnStmt = 9
    RULE_printStmt = 10
    RULE_plotStmt = 11
    RULE_expression = 12
    RULE_atom = 13
    RULE_list = 14
    RULE_newExpr = 15
    RULE_number = 16
    RULE_boolean = 17

    ruleNames =  [ "program", "statement", "varDeclaration", "assignment", 
                   "functionDef", "block", "ifStatement", "whileStatement", 
                   "forStatement", "returnStmt", "printStmt", "plotStmt", 
                   "expression", "atom", "list", "newExpr", "number", "boolean" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    FOR=4
    IN=5
    DEF=6
    RETURN=7
    VAR=8
    PRINT=9
    PLOT=10
    NEW=11
    TRUE=12
    FALSE=13
    ID=14
    INT=15
    FLOAT=16
    STRING=17
    PLUS=18
    MINUS=19
    MULT=20
    DIV=21
    MOD=22
    POW=23
    EQ=24
    NEQ=25
    GT=26
    LT=27
    GTE=28
    LTE=29
    AND=30
    OR=31
    NOT=32
    ASSIGN=33
    DOT=34
    COLON=35
    LPAREN=36
    RPAREN=37
    LBRACE=38
    RBRACE=39
    LBRACK=40
    RBRACK=41
    SEMI=42
    COMMA=43
    WS=44
    COMMENT=45
    BLOCK_COMMENT=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DLParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DLParser.StatementContext)
            else:
                return self.getTypedRuleContext(DLParser.StatementContext,i)


        def getRuleIndex(self):
            return DLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1172526858202) != 0):
                self.state = 36
                self.statement()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(DLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DLParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StatForContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DLParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forStatement(self):
            return self.getTypedRuleContext(DLParser.ForStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatFor" ):
                listener.enterStatFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatFor" ):
                listener.exitStatFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatFor" ):
                return visitor.visitStatFor(self)
            else:
                return visitor.visitChildren(self)


    class StatIfContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DLParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStatement(self):
            return self.getTypedRuleContext(DLParser.IfStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatIf" ):
                listener.enterStatIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatIf" ):
                listener.exitStatIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatIf" ):
                return visitor.visitStatIf(self)
            else:
                return visitor.visitChildren(self)


    class StatVarDeclContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DLParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varDeclaration(self):
            return self.getTypedRuleContext(DLParser.VarDeclarationContext,0)

        def SEMI(self):
            return self.getToken(DLParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatVarDecl" ):
                listener.enterStatVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatVarDecl" ):
                listener.exitStatVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatVarDecl" ):
                return visitor.visitStatVarDecl(self)
            else:
                return visitor.visitChildren(self)


    class StatPlotContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DLParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def plotStmt(self):
            return self.getTypedRuleContext(DLParser.PlotStmtContext,0)

        def SEMI(self):
            return self.getToken(DLParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatPlot" ):
                listener.enterStatPlot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatPlot" ):
                listener.exitStatPlot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatPlot" ):
                return visitor.visitStatPlot(self)
            else:
                return visitor.visitChildren(self)


    class StatFuncDefContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DLParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionDef(self):
            return self.getTypedRuleContext(DLParser.FunctionDefContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatFuncDef" ):
                listener.enterStatFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatFuncDef" ):
                listener.exitStatFuncDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatFuncDef" ):
                return visitor.visitStatFuncDef(self)
            else:
                return visitor.visitChildren(self)


    class StatExprContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DLParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(DLParser.ExpressionContext,0)

        def SEMI(self):
            return self.getToken(DLParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatExpr" ):
                listener.enterStatExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatExpr" ):
                listener.exitStatExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatExpr" ):
                return visitor.visitStatExpr(self)
            else:
                return visitor.visitChildren(self)


    class StatPrintContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DLParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def printStmt(self):
            return self.getTypedRuleContext(DLParser.PrintStmtContext,0)

        def SEMI(self):
            return self.getToken(DLParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatPrint" ):
                listener.enterStatPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatPrint" ):
                listener.exitStatPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatPrint" ):
                return visitor.visitStatPrint(self)
            else:
                return visitor.visitChildren(self)


    class StatWhileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DLParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whileStatement(self):
            return self.getTypedRuleContext(DLParser.WhileStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatWhile" ):
                listener.enterStatWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatWhile" ):
                listener.exitStatWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatWhile" ):
                return visitor.visitStatWhile(self)
            else:
                return visitor.visitChildren(self)


    class StatReturnContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DLParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def returnStmt(self):
            return self.getTypedRuleContext(DLParser.ReturnStmtContext,0)

        def SEMI(self):
            return self.getToken(DLParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatReturn" ):
                listener.enterStatReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatReturn" ):
                listener.exitStatReturn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatReturn" ):
                return visitor.visitStatReturn(self)
            else:
                return visitor.visitChildren(self)


    class StatAssignContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DLParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignment(self):
            return self.getTypedRuleContext(DLParser.AssignmentContext,0)

        def SEMI(self):
            return self.getToken(DLParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatAssign" ):
                listener.enterStatAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatAssign" ):
                listener.exitStatAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatAssign" ):
                return visitor.visitStatAssign(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = DLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = DLParser.StatVarDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.varDeclaration()
                self.state = 45
                self.match(DLParser.SEMI)
                pass

            elif la_ == 2:
                localctx = DLParser.StatAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.assignment()
                self.state = 48
                self.match(DLParser.SEMI)
                pass

            elif la_ == 3:
                localctx = DLParser.StatFuncDefContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.functionDef()
                pass

            elif la_ == 4:
                localctx = DLParser.StatIfContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.ifStatement()
                pass

            elif la_ == 5:
                localctx = DLParser.StatWhileContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 52
                self.whileStatement()
                pass

            elif la_ == 6:
                localctx = DLParser.StatForContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 53
                self.forStatement()
                pass

            elif la_ == 7:
                localctx = DLParser.StatReturnContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 54
                self.returnStmt()
                self.state = 55
                self.match(DLParser.SEMI)
                pass

            elif la_ == 8:
                localctx = DLParser.StatPrintContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 57
                self.printStmt()
                self.state = 58
                self.match(DLParser.SEMI)
                pass

            elif la_ == 9:
                localctx = DLParser.StatPlotContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 60
                self.plotStmt()
                self.state = 61
                self.match(DLParser.SEMI)
                pass

            elif la_ == 10:
                localctx = DLParser.StatExprContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 63
                self.expression(0)
                self.state = 64
                self.match(DLParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(DLParser.VAR, 0)

        def ID(self):
            return self.getToken(DLParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(DLParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(DLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return DLParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = DLParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(DLParser.VAR)
            self.state = 69
            self.match(DLParser.ID)
            self.state = 70
            self.match(DLParser.ASSIGN)
            self.state = 71
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(DLParser.ExpressionContext,i)


        def ASSIGN(self):
            return self.getToken(DLParser.ASSIGN, 0)

        def getRuleIndex(self):
            return DLParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = DLParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.expression(0)
            self.state = 74
            self.match(DLParser.ASSIGN)
            self.state = 75
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(DLParser.DEF, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DLParser.ID)
            else:
                return self.getToken(DLParser.ID, i)

        def LPAREN(self):
            return self.getToken(DLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(DLParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(DLParser.BlockContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DLParser.COMMA)
            else:
                return self.getToken(DLParser.COMMA, i)

        def getRuleIndex(self):
            return DLParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):

        localctx = DLParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(DLParser.DEF)
            self.state = 78
            self.match(DLParser.ID)
            self.state = 79
            self.match(DLParser.LPAREN)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 80
                self.match(DLParser.ID)
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==43:
                    self.state = 81
                    self.match(DLParser.COMMA)
                    self.state = 82
                    self.match(DLParser.ID)
                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 90
            self.match(DLParser.RPAREN)
            self.state = 91
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(DLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(DLParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DLParser.StatementContext)
            else:
                return self.getTypedRuleContext(DLParser.StatementContext,i)


        def getRuleIndex(self):
            return DLParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = DLParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(DLParser.LBRACE)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1172526858202) != 0):
                self.state = 94
                self.statement()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(DLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(DLParser.IF, 0)

        def LPAREN(self):
            return self.getToken(DLParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(DLParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(DLParser.RPAREN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DLParser.BlockContext)
            else:
                return self.getTypedRuleContext(DLParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(DLParser.ELSE, 0)

        def getRuleIndex(self):
            return DLParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = DLParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(DLParser.IF)
            self.state = 103
            self.match(DLParser.LPAREN)
            self.state = 104
            self.expression(0)
            self.state = 105
            self.match(DLParser.RPAREN)
            self.state = 106
            self.block()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 107
                self.match(DLParser.ELSE)
                self.state = 108
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(DLParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(DLParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(DLParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(DLParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(DLParser.BlockContext,0)


        def getRuleIndex(self):
            return DLParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = DLParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(DLParser.WHILE)
            self.state = 112
            self.match(DLParser.LPAREN)
            self.state = 113
            self.expression(0)
            self.state = 114
            self.match(DLParser.RPAREN)
            self.state = 115
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(DLParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(DLParser.LPAREN, 0)

        def ID(self):
            return self.getToken(DLParser.ID, 0)

        def IN(self):
            return self.getToken(DLParser.IN, 0)

        def expression(self):
            return self.getTypedRuleContext(DLParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(DLParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(DLParser.BlockContext,0)


        def getRuleIndex(self):
            return DLParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):
